--- a/iohk.cabal
+++ b/iohk.cabal
@@ -15,6 +15,7 @@ cabal-version:       >=1.10
 executable iohk
   hs-source-dirs:      src
   main-is:             Main.hs
+  other-modules:       Raft
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , network-transport-tcp
@@ -26,3 +27,6 @@ executable iohk
                      , time >= 1.5
                      , binary >= 0.7
                      , random >= 1.1
+                     , MonadRandom >= 0.4
+                     , lens
+                     , containers
